attempt to fix height on mobile browsers

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,8 @@ body {
     display: none;
     position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     overflow: hidden;
   }
   .background-container {
